primeira versao funcionando perfeitamente